apps/planka/08-planka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planka
  namespace: planka
spec:
  selector:
    app: planka
  ports:
  - name: http
    port: 1337
    targetPort: 1337
